# xrpl-camp

./: .gitignore  BUILD.md  CHANGELOG.md  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.md  README.pt-BR.md  README.zh.md  SCORECARD.md  SECURITY.md  SHIP_GATE.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  publish.yml  release-binaries.yml
npm/: README.md  package.json
scripts/: verify.sh
site/: astro.config.mjs  package-lock.json
site/src/: site-config.ts
site/src/content/docs/handbook/: beginners.md  getting-started.md  index.md  lessons.md  proof-pack.md  reference.md
tests/: test_certificate.py  test_cli.py  test_dry_run.py  test_errors.py  test_features.py  test_models.py  test_proof_pack.py  test_transport.py  test_version.py  test_wallet.py
xrpl_camp/: __init__.py  __main__.py  certificate.py  cli.py  errors.py  lessons.py  models.py  proof_pack.py  transport.py  wallet.py
